--- a/web/wp-content/themes/cncf-twenty-two/source/scss/core/_animations.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/core/_animations.scss
@@ -1,6 +1,6 @@
 /* Pop */
 @keyframes pop-sm {
 	50% {
-		transform: scale(1.2);
+		transform: scale(1.05);
 	}
 }
