--- a/web/wp-content/themes/cncf-twenty-two/source/scss/core/_header.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/core/_header.scss
@@ -342,6 +342,7 @@
 			@media (min-width: 1250px) {
 				margin-left: 40px;
 				height: 30px;
+				width: 30px;
 			}
 		}
 
